[package]
name = "thener"
version = "0.1.0"
edition = "2021"
about = "Toma un documento `.md` y genera un `.pdf`"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
url = "2.4.1"
headless_chrome = { version = "1.0.5", features = ["fetch"] }
markdown = "1.0.0-alpha.9"
clap = { version = "4.2.7", features = ["derive"] }
path-absolutize = "3.1.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
defer-lite = "1.0.0"
fs_extra = "1.3.0"
indicatif = "0.17.7"
comrak = "0.19"
tempfile = "3.8.1"